// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: ScreenPositionHelper 1`] = `
<div
  className="layout-page-side-outer"
>
  <div
    className="layout-page-side"
    style={
      Object {
        "top": 0,
      }
    }
  >
    <div
      className="layout-page-side-inner"
    >
      <div
        className="layout-page-filters"
      >
        <ListHeader
          canCreate={false}
          refreshQualityGates={[Function]}
        />
        <DeferredSpinner
          loading={true}
        >
          <List
            qualityGates={Array []}
          />
        </DeferredSpinner>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: default 1`] = `
<Fragment>
  <Helmet
    defaultTitle="quality_gates.page"
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    titleTemplate="%s - quality_gates.page"
  />
  <div
    className="layout-page"
    id="quality-gates-page"
  >
    <Suggestions
      suggestions="quality_gates"
    />
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
  </div>
</Fragment>
`;

exports[`should render correctly: default gate 1`] = `
<Fragment>
  <Helmet
    defaultTitle="quality_gates.page"
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    titleTemplate="%s - quality_gates.page"
  />
  <div
    className="layout-page"
    id="quality-gates-page"
  >
    <Suggestions
      suggestions="quality_gates"
    />
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <Details
      id="2"
      onSetDefault={[Function]}
      qualityGates={
        Array [
          Object {
            "id": "1",
            "name": "qualitygate",
          },
          Object {
            "id": "2",
            "isDefault": true,
            "name": "qualitygate 2",
          },
        ]
      }
      refreshQualityGates={[Function]}
    />
  </div>
</Fragment>
`;

exports[`should render correctly: specific gate 1`] = `
<Fragment>
  <Helmet
    defaultTitle="quality_gates.page"
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    titleTemplate="%s - quality_gates.page"
  />
  <div
    className="layout-page"
    id="quality-gates-page"
  >
    <Suggestions
      suggestions="quality_gates"
    />
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <Details
      id="1"
      onSetDefault={[Function]}
      qualityGates={
        Array [
          Object {
            "id": "1",
            "name": "qualitygate",
          },
          Object {
            "id": "2",
            "isDefault": true,
            "name": "qualitygate 2",
          },
        ]
      }
      refreshQualityGates={[Function]}
    />
  </div>
</Fragment>
`;
